# qa-test-portal-gov-workshop

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/agents/: azdo-sync.agent.md  code-reviewer.agent.md  document-creator.agent.md  playwright-e2e.agent.md  python-test-orchestrator.agent.md  qa-inspector.agent.md  qa-master.agent.md  test-analyzer.agent.md  test-planner.agent.md  test-runner.agent.md  test-writer.agent.md
.github/hooks/: hooks.json
.github/instructions/: portal-gov-tests.instructions.md  python-code.instructions.md  python-tests.instructions.md
.github/prompts/: coverage-report.prompt.md  run-full-qa.prompt.md  setup-azure-devops.prompt.md  setup-azure-test-plan.prompt.md
.github/workflows/: ci.yml
api/: main.py  pyproject.toml
api/application_core/entities/: cidadao.py  cnh.py  ipva.py  veiculo.py
api/application_core/enums/: pagamento_ipva_status.py  parcelamento_ipva_status.py  renovacao_cnh_status.py
api/application_core/interfaces/: icnh_repository.py  icnh_service.py  iipva_repository.py  iipva_service.py
api/application_core/services/: cnh_service.py  ipva_service.py
api/infrastructure/: json_cnh_repository.py  json_data.py  json_ipva_repository.py
api/tests/: test_cnh_service.py  test_ipva_service.py  test_json_cnh_repository.py  test_json_ipva_repository.py
e2e/: portal-gov.spec.ts  wi79-fgts.spec.ts
playwright-report/: index.html
src/: App.tsx
src/__tests__/: formatters.test.ts  services.test.ts  validators.test.ts
src/components/: BoletoViewer.tsx  BreadcrumbNav.tsx  Footer.tsx  (+5 more)
(+38 files in other folders)
